--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>01-ts-basics</title>
   </head>
   <body>
-    <script type="module" src="/src/task-1.js"></script>
-    <script type="module" src="/src/task-2.js"></script>g
-    <script type="module" src="/src/task-3.js"></script>
-    <script type="module" src="/src/task-4.js"></script>
+    <script type="module" src="/src/task-1.ts"></script>
+    <script type="module" src="/src/task-2.ts"></script>g
+    <script type="module" src="/src/task-3.ts"></script>
+    <script type="module" src="/src/task-4.ts"></script>
     <script type="module" src="/src/task-5.ts"></script>
     <script type="module" src="/src/task-6.ts"></script>
     <script type="module" src="/src/task-7.ts"></script>
